
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1090] Added 'Rename File' window to directory tree
- Vast improvements to setup, including removing of mootools, using ExtCore now, simplified UI workflow to remove unnecessary AJAX calls, added in database creation checking, collation specification, etc
- Fixed bug with modPackageBuilder that would ignore the specified path for a Namespace
- [#MODX-1207] Changed modSession.id column to varchar(40) to support session.hash_function=1 with session.hash_bytes_per_char=4.
- Simplified and optimized session handling, removing older PHP workarounds and adjusting preset system settings.
- Make sure non-static Resources with binary content types get processed and output.
- [#MODX-1450] Added paging to Template combobox to allow for large numbers of templates
- [#MODX-1443] Tree sorting now works for modMenus
- Removed deprecated system settings from build
- [#MODX-1448] Fixed issue with container checkbox not persisting
- [#MODX-1426] Fixed issue with MySQL checks on non-standard 
- [#MODX-1437] Fixed duplicate policy
- Fixed some issues with Form Customization
- Added 'address' field to modUserProfile
- Added ability to edit the (anonymous) user group from the user group editing panels
- Fixed typo in usergroup get processor
- [#MODX-1018] Fixed bug with having to click the Clear Filter button in a settings grid twice
- [#MODX-1380] Fixed bug with expanding node when quick creating a resource in it
- [#MODX-1326] Fixed the access denied logout form, added styling
- [#MODX-1423] Fixed error with duplicating a template
- [#MODX-1409], [#MODX-919] Fixed issue where tag symbols were being stripped in Elements and breaking filtering and nested tag functionality