@@ -50,7 +50,7 @@ $_lang['continue'] = 'Continue';
 $_lang['dau_err_save'] = 'Error saving the default admin user.';
 $_lang['dau_saved'] = 'Created default admin user.';
 $_lang['db_check_db'] = 'Checking database:';
-$_lang['db_connecting'] = 'Connecting to database:';
+$_lang['db_connecting'] = 'Connecting to mysql server:';
 $_lang['db_connected'] = 'Database connection successful!';
 $_lang['db_created'] = 'Successfully created the database.';
 $_lang['db_err_connect'] = 'Could not connect to the database.';
