@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Fixed collation grabbing for setup/
 - [#MODX-1090] Added 'Rename File' window to directory tree
 - Vast improvements to setup, including removing of mootools, using ExtCore now, simplified UI workflow to remove unnecessary AJAX calls, added in database creation checking, collation specification, etc
 - Fixed bug with modPackageBuilder that would ignore the specified path for a Namespace
